# servicehisilicon-test-pli

./: README.md  configure.ac
.github/workflows/: servicehisilicon.yml
CI/: build.sh
plugin/: __init__.py  plugin.py
servicehisilicon/: pythonmodule.cpp  servicehisilicon.cpp  servicehisilicon.h
